--- a/infancy&childhood.html
+++ b/infancy&childhood.html
@@ -10,20 +10,22 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="infancy&childhood.html">Infancy & Childhood</a></li>
-            <li><a href="#">Early Childhood</a></li>
-            <li><a href="#">Middle Childhood</a></li>
-            <li><a href="#">Adolescence</a></li>
-            <li><a href="#">Early Adulthood</a></li>
-            <li><a href="#">Middle Adulthood</a></li>
-            <li><a href="#">Late Adulthood</a></li>
+            <li><a href="infancy&childhood.html">Infancy & Childhood (0-2)</a></li>
+            <li><a href="earlychildhood.html">Early Childhood (2-7)</a></li>
+            <li><a href="middlechildhood.html">Middle Childhood (7-12)</a></li>
+            <li><a href="adolescence.html">Adolescence (12-20)</a></li>
+            <li><a href="earlyadult.html">Early Adulthood (20-40)</a></li>
+            <li><a href="middleadult.html">Middle Adulthood (40-65)</a></li>
+            <li><a href="lateadult.html">Late Adulthood (65+)</a></li>
         </ul>
     </nav>
     <div id="content">
-        <!-- Content will be loaded here -->
+
     </div>
     
 <h1>Infancy and Childhood</h1>
+<h3>Sensorimotor stage (Piaget's Theory)</h3>
+<h3>Erikson's Theory of trust vs mistrust is from 0-12 months, and his theory of Autonomy vs shame and doubt begins after that at age 1</h3>
 <h3>Date of Birth: September 26, 2008</h3>
 <h3>Weight: 4lbs & 14oz</h3>
 <h3>Height: 19.5in</h3>
@@ -36,10 +38,66 @@
 
 
     <figure>
-    <img src="nicu.jpg" type="image/jpg">
-    <div><figcaption>This is me as a baby. I was born 5 week premature by cesarean section, and spent 10 days in the NICU before I went home. The light is phototherapy that helps babies born with jaundice. When babies are born prematurly, they usually cannot produce red blood cells. The blue light helps the proccess of forming new red blood cells.</figcaption></div>
+    <img src="1nicu.jpg" type="image/jpg">
+    <div><figcaption>This is me as a baby. I was born 5 week premature by cesarean section, and spent 10 days in the NICU before I went home. The light is phototherapy that helps babies born with jaundice. When babies are born prematurly, they usually cannot produce red blood cells. The blue light helps the process of forming new red blood cells.</figcaption></div>
     </figure>
-    <h2 style="font-weight: 520;">Month 1</h2>
-    <img id="babyolive" style="width: 35%; height: auto; margin-top: 700px;" src="babyolive.jpg">
+    <h2 style="font-weight: 520;">Months 1-3</h2>
+    <h2 style="font-size: large;">Begins turning head in response to sounds</h2>
+    <h2 style="font-size: large;">Most do not sleep through the night</h2>
+    <h2 style="font-size: large;">Begin to understand cause and effect</h2>
+    <h2 style="font-size: large;">Can begin to follow something with their eyes</h2>
+    <h2 style="font-size: large;">Rooting reflex: Suckling in response to items in their <br>mouth</h2>
+    <h2 style="font-size: large;">Swallowing reflex: Swallowing and breathing are <br>not yet coordinated</h2>
+    <h2 style="font-size: large;">Grasp reflex: in response to touching the palm of <br>the hand, they will grasp and hold</h2>
+    <h2 style="font-size: large;">Stepping reflex: if held so that the feet can just touch <br>the ground, the infant shows walking movement</h2>
+    <h2 style="font-size: large;">They will explore the world through their senses and motor<br> activity</h2>
+    <h2 style="font-size: large;">They cant tell the difference between themselves and the<br> world, so they are extremely curious</h2>
+    <h2 style="font-size: large;">They find out that things exist even if they cannot see it <br>(Object permanence)</h2>
+    <h2 style="font-size: largest;"><br>Attachment Theory:<br></h2>
+    <h2 style="font-size: large;">Attachment is the emotional bond you form with another <br>person. Human nature causes us to develop these bonds <br>as babies so we stay close to the mother giving us a better <br>chance of survival.</h2>
+    <h2 style="font-size: large;">Secure Attachment<br> - Not worrying<br> - Crying when mother leaves<Br> - Welcoming her back<br> - Happily continues playing</h2>
+        <h2 style="font-size: large;">Insecure Attachment - Avoidance<br> - Not caring if mother leaves<br> - Making little contact upon return<Br> - Treating strangers the same as mom</h2>
+            <h2 style="font-size: large;">Insecure Attachment - Anxiety<br> - Ignoring mother upon reunion<br> - Protesting loudly if she leaves<Br> - May cry to be picked up then demand to be put down</h2>
+                <h2 style="font-size: large;"> Causes of an Insecure Attachment<br> - Abandonment or deprevation of needs<br> - Abusive, neglectful or erratic parenting<Br> - Genetic influences<br> - Changing, stressful influences in childs environment</h2>
+                    <h2 style="font-size: largest;"><br>Erikson's Theory: Trust vs Mistrust (Months 0-12)<br></h2>
+                    <h2 style="font-size: large;">- I am vulnerable and depend on other to meet my needs<br> - If my needs are not met, I will develop mistrust<Br> - If my needs are met, I will develop trust<br> - This is the stage when I learn to trust the world</h2>
+                        <h2 style="font-size: largest;"><br>Erikson's Theory: Autonomy vs Shame and Doubt <br>(Years 1-3)<br></h2>
+                        <h2 style="font-size: large;">- If given independence, they will develop autonomy in their choices<br> and opinions<br> - If you dont allow independence, the child will feel shame and<br> self doubt<Br> - If they are not independent, they won't feel confident in choices they<br> make later in life<br> - This is the stage when they learn basic will</h2>
+                        <h2 style="font-weight: 520;"><br>Months 4-11</h2>
+    <h2 style="font-size: large;"> - Vocalizes in response to stimulus</h2>
+    <h2 style="font-size: large;"> - Can sit up on thier own</h2>
+    <h2 style="font-size: large;"> - First teeth begin to come in (My first tooth was around 4 months)</h2>
+    <h2 style="font-size: large;"> - Uses more fine motor skills like grabbing and reaching</h2>
+    <h2 style="font-size: large;"> - Smiles more at interesting stimuli</h2>
+    <h2 style="font-size: large;"> - Stops crying at the sound of the primary caregivers voice</h2>
+    <h2 style="font-size: large;"> - Turns head in direction of noise</h2>
+    <h2 style="font-size: large;"> - Begins eating pureed food (🎃I loved pumpkin🎃)</h2>
+    <h2 style="font-size: large;"> - Begins responding to their name</h2>
+    <h2 style="font-size: large;"> - Begins forming sounds similar to actual words</h2>
+    <h2 style="font-size: large;"> - Begins expressing emotions without crying</h2>
+    <h2 style="font-size: large;"> - Can identify strangers</h2>
+    <h2 style="font-size: large;"> - Begins feeding themselves</h2>
+    <h2 style="font-size: large;"> - Starts becoming more curious and exploritory </h2>
+    <h2 style="font-size: large;"> - Can identify if an object has fallen, even if it doesn't make a sound</h2>
+    <h2 style="font-size: large;"> - Says their first word (My first word was "dada")</h2>
+                        <h2 style="font-size: large; color: white;"><br>White space<br></h2>
+
+                        <h2 style="font-weight: 520;"><br>Months 12-24</h2>
+                        <h2 style="font-size: large;">This period of 1-2 years is usually when all the big milestones happen</h2>
+                        <h2 style="font-size: large;"> - Start taking their first few steps (My first steps were around 13 months)</h2>
+                        <h2 style="font-size: large;"> - Begins to show greater independence</h2>
+                        <h2 style="font-size: large;"> - Imitating the behavior of others</h2>
+                        <h2 style="font-size: large;"> - Can wave hello and goodbye</h2>
+                        <h2 style="font-size: large;"> - Extremely curious and exploritory</h2>
+                        <h2 style="font-size: large;"> - Recognize names and people</h2>
+                        <h2 style="font-size: large;"> - Can form simple phrases</h2>
+                        <h2 style="font-size: large;"> - Can follow simple directions</h2>
+                        <h2 style="font-size: large;"> - Begins creative playing</h2>
+                                            <h2 style="font-size: largest; color: white;"><br>White space<br></h2>
+    <img id="babyolive" style="width: 35%; height: auto; margin-left: 57%; position: absolute; left: 2%; top: 90%;" src="1babyolive.jpg">
+    <img id="sucking" style="width: 25%; height: auto; margin-left: 65%; position: absolute; left: 2%; margin-top: 76%;" src="1sucking.jpeg">
+    <img id="epa" style="width: 30%; height: auto; margin-left: 62%; position: absolute; left: 4%; top: 222%;" src="1epa.jpeg">
+    <img id="pumpkin" style="width: 30%; height: auto; margin-left: 62%; position: absolute; left: 4%; top: 315%;" src="1pumpkin.jpeg">
+    <img id="lollipop" style="width: 30%; height: auto; margin-left: 62%; position: absolute; left: 4%; top: 380%;" src="1lollipopmain.jpeg">
 </body>
 </html>
