--- a/middlechildhood.html
+++ b/middlechildhood.html
@@ -48,6 +48,19 @@
     <h2 style="font-size: large;">Puberty begins</h2>
     <h2 style="font-size: large;">Grows a more adult mind-set</h2>
 
+    <h2 style="font-size: largest;"><br>Trying sports!! (I quit almost all)<br></h2>
+    <h2 style="font-size: large;">Ballet (Quit)</h2>
+    <h2 style="font-size: large;">Soccer (Quit)</h2>
+    <h2 style="font-size: large;">Swimming (Stuck with for 9 years, then quit)</h2>
+    <h2 style="font-size: large;">Tennis (Quit)</h2>
+    <h2 style="font-size: large;">Ice Skating (Quit)</h2>
+    <h2 style="font-size: large;">Lacrosse (Quit)</h2>
+    <h2 style="font-size: large;">Tai Kwon Do (Quit)</h2>
+    <h2 style="font-size: large;">Gymnastics (Quit)</h2>
+    <h2 style="font-size: large;">Rowing (Quit)</h2>
+    <h2 style="font-size: large;">Softball!! (The only one I stuck with)</h2>
+
+
             <h2 style="font-size: largest;"><br>Erikson's Theory: Industriousness vs Inferiority<br>(Years 6-11)<br></h2>
             <h2 style="font-size: large;">- Kids should be able to do a task to completion<br> - When doing or completing tasks, they should feel supported <br>for their effort<Br> - If not supported, they may feel judged that they will not live <br>up to your standards<br> - This is the stage when they learn competence</h2>
       
