--- a/adolescence.html
+++ b/adolescence.html
@@ -47,7 +47,8 @@
     <h2 style="font-size: large;">Is more interested in exploring</h2>
     <h2 style="font-size: large;">Main interests are defined in this period</h2>
     <h2 style="font-size: large;">Begins driving🚘</h2>
-
+    <h2 style="font-size: large;">Gets into MIT for Biology</h2>
+    <h2 style="font-size: large;">First job is a doggie daycare worker</h2>
 
     <h2 style="font-size: largest; color: white;"><br>White space<br></h2>
     <h2 style="font-size: large;">This was the age when I learned about photography and began <br>doing that more.  I also learned that my favorite subject was science!</h2>
