--- a/middleadult.html
+++ b/middleadult.html
@@ -28,7 +28,7 @@
 <h3>Generativity vs stagnation begins at age 35</h3>
 
     <figure>
-    <img src=".jpeg" style="width: 30%; left: 8%;" type="image/jpg">
+    <img src="willsmith2.jpeg" style="width: 30%; left: 8%;" type="image/jpg">
     </figure>
     <h2 style="font-weight: 520;">Years 40-65</h2>
     <h2 style="font-size: large;">Peak in love and work</h2>
@@ -52,7 +52,6 @@
 
                 
                                             <h2 style="font-size: largest; color: white;"><br>White space<br></h2>
-    <img id="greendonkey" style="width: 28%; height: auto; margin-left: 57%; position: absolute; left: 10%; top: 94%;" src=".jpeg">
-    <img id="cicada" style="width: 30%; height: auto; margin-left: 62%; position: absolute; left: 4%; top: 170%;" src=".jpeg">
+    <img id="greendonkey" style="width: 28%; height: auto; margin-left: 57%; position: absolute; left: 10%; top: 85%;" src="willsmith.jpeg">
 </body>
 </html>
