--- a/earlyadult.html
+++ b/earlyadult.html
@@ -30,7 +30,7 @@
 <h3>Generativity vs stagnation begins at age 35</h3>
 
     <figure>
-    <img src=".jpeg" style="width: 30%; left: 8%;" type="image/jpg">
+    <img src="beer.png" style="width: 40%; left: 5%; right: 10%" type="image/jpg">
     </figure>
     <h2 style="font-weight: 520;">Years 18-25</h2>
     <h2 style="font-size: large;">At our physiological peak</h2>
@@ -44,8 +44,11 @@
     <h2 style="font-size: large;"> - no longer considered a minor</h2>
 
 
-    <h2 style="font-size: largest; color: white;"><br>White space<br></h2>
+    <h2 style="font-size: large; color: white;"><br>White space<br></h2>
+<h2 style="font-size: large; color:black;">My first beer!!</h2>
 
+
+    <h2 style="font-size: large; color:black;">I adopt my first child and name him Dill. His middle name is pickle to <br>match my name.</h2>
     <h2 style="font-size: largest;"><br>Erikson's Theory: Intimacy vs Isolation <br>(Years 18-35)<br></h2>
     <h2 style="font-size: large;">- Looks for a person to spend your life with<br> - Looks for work that will fulfill them and their interests<Br> - If identity and role is not established, they cannot continue<br> to finding a partner<br> - This is the stage when they learn love</h2>
 
@@ -62,7 +65,6 @@
                         <h2 style="font-size: large;"> - Around the age people decide to get married and start a family</h2>
                 
                                             <h2 style="font-size: largest; color: white;"><br>White space<br></h2>
-    <img id="greendonkey" style="width: 28%; height: auto; margin-left: 57%; position: absolute; left: 10%; top: 94%;" src=".jpeg">
-    <img id="cicada" style="width: 30%; height: auto; margin-left: 62%; position: absolute; left: 4%; top: 170%;" src=".jpeg">
+    <img id="greendonkey" style="width: 40%; height: auto; margin-left: 57%; position: absolute; left: 0%; top: 94%;" src="adoptme.png">
 </body>
 </html>
